netbox/Netbox.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netbox
  labels:
    app: netbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
      - name: netbox
        image: ninech/netbox:v2.2.6
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: netbox-nginx-config
          mountPath: /etc/netbox-nginx/ 
        - name: netbox-static-files
          mountPath: /opt/netbox/netbox/static  
      restartPolicy: Always
      volumes:
      - name: netbox-nginx-config
        configMap:
          name: nginx-conf
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files

---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app: netbox
spec:
  type: LoadBalancer
  ports:
  - name: nbox
    port: 8001
    targetPort: 8001
  selector:
    app: netbox
