netbox/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netbox-ingress
  namespace: netbox
  annotations:
   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: netbox.detainedu.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
